docs: correct hangzone paths
